--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
-  <body>
-
-    <div class="flex flex-center vh-100" id="root"></div>
+  <body class="overflow-hidden">
+    <div class="flex flex-center" id="root"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
