--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
-  <body>
+  <body class="overflow-hidden">
 
     <div class="flex flex-center vh-100" id="root"></div>
     <script src="bundle.js"></script>
