--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Polygon Slicer</title>
     <meta title="description" content="">
-    <meta name="viewport" content="width=device-width, height=device-height,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
@@ -22,8 +22,7 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   <body class="overflow-hidden">
-
-    <div class="flex flex-center vh-100" id="root"></div>
+    <div class="flex flex-center" id="root"></div>
     <script src="bundle.js"></script>
   </body>
 </html>
